# mtat

./: .gitignore  CLAUDE.md  Dockerfile  README.md  RUBRIC.md  docker-compose.yml  generate-variant.py  pyproject.toml  requirements.txt  upload-to-moodle.py
.claude/hooks/: session-start.sh
example-course/: README.md
example-course/01-concept/: base.md  metadata.yaml
example-course/02-demo/: base.md  metadata.yaml
example-course/03-exercise/: base.md  metadata.yaml
example-course/04-assessment/: base.md  metadata.yaml
prompts/: adapt.md
variants/: manifest.yaml
