[project]
name = "mtat"
version = "0.1.0"
description = "Modular Training Architecture Template — AI-assisted course content adaptation"
requires-python = ">=3.9"
dependencies = [
    "anthropic==0.86.0",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "markdown==3.10.2",
]
